WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298442
Limit the scope of invalidation traversal for `:has(.changed) > .subject`
https://bugs.webkit.org/show_bug.cgi?id=298442
Summary
Limit the scope of invalidation traversal for `:has(.changed) > .subject`
Antti Koivisto
Reported
2025-09-05 07:33:49 PDT
Similar to
https://commits.webkit.org/299162@main
, optimize this case too.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-05 09:01:45 PDT
<
rdar://problem/159946487
>
Antti Koivisto
Comment 2
2025-09-05 09:16:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50363
EWS
Comment 3
2025-09-08 00:03:40 PDT
Committed
299685@main
(1053d8eb0883): <
https://commits.webkit.org/299685@main
> Reviewed commits have been landed. Closing PR #50363 and removing active labels.
EWS
Comment 4
2025-09-19 20:49:15 PDT
Committed
297297.444@safari-7622-branch
(6f6e28b88814): <
https://commits.webkit.org/297297.444@safari-7622-branch
> Reviewed commits have been landed. Closing PR #3679 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug