Limit the scope of invalidation traversal for `:has(.changed) > .subject` https://bugs.webkit.org/show_bug.cgi?id=298442 rdar://problem/159946487

Reviewed by Alan Baradlay.

Similar to https://commits.webkit.org/299162@main, optimize `:has(.changed) > .subject` too.

* Source/WebCore/style/ChildChangeInvalidation.cpp:
(WebCore::Style::ChildChangeInvalidation::invalidateForChangedElement):
* Source/WebCore/style/ClassChangeInvalidation.cpp:
(WebCore::Style::ClassChangeInvalidation::computeInvalidation):
* Source/WebCore/style/RuleFeature.cpp:
(WebCore::Style::isSiblingOrSubject):
(WebCore::Style::isScopeBreaking):
(WebCore::Style::computeHasPseudoClassMatchElement):
(WebCore::Style::computeSubSelectorMatchElement):
* Source/WebCore/style/RuleFeature.h:

Add a new enum value for this case.
Also added some documentation.

* Source/WebCore/style/StyleInvalidator.cpp:
(WebCore::Style::Invalidator::invalidateStyleWithMatchElement):

Traverse the direct children of the ancestors only.

Canonical link: https://commits.webkit.org/299685@main