Source/WebCore/style/ClassChangeInvalidation.cpp
@@ -131,6 +131,7 @@ void ClassChangeInvalidation::computeInvalidation(const SpaceSplitString& oldCla
         case MatchElement::HasChild:
         case MatchElement::HasChildParent:
         case MatchElement::HasChildAncestor:
+        case MatchElement::HasDescendantParent:
         case MatchElement::HasDescendant:
         case MatchElement::HasSibling:
         case MatchElement::HasSiblingDescendant:
