Source/WebCore/style/RuleFeature.cpp
@@ -61,6 +61,7 @@ static bool isSiblingOrSubject(MatchElement matchElement)
     case MatchElement::HasSiblingDescendant:
     case MatchElement::HasChildParent:
     case MatchElement::HasChildAncestor:
+    case MatchElement::HasDescendantParent:
     case MatchElement::HasNonSubject:
     case MatchElement::HasScopeBreaking:
         return false;
@@ -109,6 +110,7 @@ static bool isScopeBreaking(MatchElement matchElement)
     case MatchElement::HasSiblingDescendant:
     case MatchElement::HasChildParent:
     case MatchElement::HasChildAncestor:
+    case MatchElement::HasDescendantParent:
     case MatchElement::HasNonSubject:
         return false;
     }
@@ -237,6 +239,7 @@ MatchElement computeHasPseudoClassMatchElement(const CSSSelector& hasSelector)
     case MatchElement::HasAnySibling:
     case MatchElement::HasChildParent:
     case MatchElement::HasChildAncestor:
+    case MatchElement::HasDescendantParent:
     case MatchElement::HasNonSubject:
     case MatchElement::HasScopeBreaking:
     case MatchElement::Host:
@@ -275,6 +278,12 @@ static MatchElement computeSubSelectorMatchElement(MatchElement matchElement, co
                 if (matchElement == MatchElement::Ancestor)
                     return MatchElement::HasChildAncestor;
             }
+
+            if (hasSelectorMatchElement == MatchElement::HasDescendant) {
+                if (matchElement == MatchElement::Parent)
+                    return MatchElement::HasDescendantParent;
+            }
+
 
             if (matchElement != MatchElement::Subject)
                 return MatchElement::HasNonSubject;
